[package]
name = "hls_client"
version = "1.1.0"
edition = "2021"
authors = ["Sahil Gupte <sahilsachingupte@gmail.com>"]
license = "MIT"
keywords = ["hls", "media", "rodio", "stream"]
categories = ["multimedia"]
description = "Library to generate a single stream from HLS segments"
repository = "https://github.com/Ovenoboyo/hls_client_rs"

[dependencies]
bytes = "1.10.1"
futures = { version = "0.3.31", default-features = false }
hls_m3u8 = "0.5.1"
mediatype = { version = "0.20.0", default-features = false }
reqwest = { version = "0.12.20", features = [
  "stream",
], default-features = false, optional = true }
stream-download = { version = "0.22.6", optional = true, default-features = false }
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }
url = "2.5.4"
tokio = { version = "1.45.1", default-features = false }

[dev-dependencies]
rodio = "0.20.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
stream-download = "0.22.7"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
libmpv2 = "4.1.0"

[features]
default = ["blocking", "reqwest-native-tls", "stream_download"]
blocking = ["futures/executor"]
stream_download = ["dep:stream-download"]
tracing = ["dep:tracing"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-rustls = ["reqwest", "reqwest/rustls-tls"]

[[example]]
name = "blocking"
required-features = ["blocking", "reqwest-native-tls"]
doc-scrape-examples = true

[[example]]
name = "stream_download"
required-features = ["stream_download", "reqwest-native-tls"]

[[example]]
name = "video_mpv"
required-features = ["stream_download", "reqwest-native-tls"]

doc-scrape-examples = true
