[package]
name = "hls_client"
version = "1.1.0"
edition = "2021"
authors = ["Sahil Gupte <sahilsachingupte@gmail.com>"]
license = "MIT"
keywords = ["hls", "media", "rodio", "stream"]
categories = ["multimedia"]
description = "Library to generate a single stream from HLS segments"
repository = "https://github.com/Ovenoboyo/hls_client_rs"

[dependencies]
async-trait = "0.1.68"
bytes = "1.10.1"
hex = "0.4.3"
hls_m3u8 = "0.5.1"
thiserror = "2.0.17"
url = "2.5.7"
futures = { version = "0.3.31", default-features = false }
mediatype = { version = "0.20.0", default-features = false }
reqwest = { version = "0.12.24", features = [ "stream" ], default-features = false, optional = true }
stream-download = { version = "0.22.7", optional = true, default-features = false }
tokio = { version = "1.48.0", default-features = false }
tokio-util = "0.7.10"
tracing = { version = "0.1.41", optional = true }
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", optional = true }

[dev-dependencies]
rodio = "0.21.1"
stream-download = "0.22.7"
libmpv2 = "5.0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["blocking", "reqwest-native-tls", "stream_download", "aes-encryption"]
aes-encryption = ["dep:aes", "dep:cbc"]
blocking = ["futures/executor"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-rustls = ["reqwest", "reqwest/rustls-tls"]
stream_download = ["dep:stream-download"]
tracing = ["dep:tracing"]

[[example]]
name = "blocking"
required-features = ["blocking", "reqwest-native-tls"]
doc-scrape-examples = true

[[example]]
name = "encrypted"
required-features = ["blocking", "reqwest-native-tls", "aes-encryption",]

[[example]]
name = "stream_download"
required-features = ["stream_download", "reqwest-native-tls"]

[[example]]
name = "video_mpv"
required-features = ["stream_download", "reqwest-native-tls"]
doc-scrape-examples = true
